add reactive library-service and tune gateway