@@ -10,9 +10,8 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>api-gateway</module>
-        <module>book-service</module>
-        <module>eureka-server</module>
+        <module>pom-sg.xml</module>
+        <module>pom-qs.xml</module>
     </modules>
 
     <properties>
@@ -20,78 +19,8 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot.version>4.0.5</spring-boot.version>
-        <lombok.version>1.18.44</lombok.version>
-        <spring-cloud.version>2025.1.1</spring-cloud.version>
-        <!--        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>-->
+        <maven.surefire.version>3.5.4</maven.surefire.version>
+        <compiler-plugin.version>3.15.0</compiler-plugin.version>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <!--            <dependency>-->
-            <!--                <groupId>io.quarkus.platform</groupId>-->
-            <!--                <artifactId>quarkus-bom</artifactId>-->
-            <!--                <version>${quarkus.version}</version>-->
-            <!--                <type>pom</type>-->
-            <!--                <scope>import</scope>-->
-            <!--            </dependency>-->
-        </dependencies>
-    </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.15.0</version>
-                <configuration>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.5</version>
-                <configuration>
-                    <argLine>
-                        -XX:+EnableDynamicAgentLoading
-                        --enable-native-access=ALL-UNNAMED
-                        -Dfile.encoding=UTF-8
-                    </argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
